WHITE-PAPER/reviewers/packages/v1/media/PACKAGE_MANIFEST.md
# Review Package: MEDIA

**Generated:** 2025-12-16 00:21:53
**Target Venue:** Press / Podcasts / TED
**Total Size:** 32.3 KB
**Total Files:** 5

---

## Description

Media/press package (Press releases, podcasts)

---

## Reading Order

Start with these files in order:

1. `submissions/media/README.md`
2. `submissions/media/LLM_Unlocking_AI_Identity.md`
3. `submissions/popular_science/LLM_Ancient_Philosophy_Meets_Modern_AI.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 4 files | 22.9 KB |
| guides/ | 1 files | 9.4 KB |

**Total:** 5 files, 32.3 KB

---

## File Listing

### submissions/

- `submissions\media\LLM_Unlocking_AI_Identity.md` (5.3 KB)
- `submissions\media\README.md` (5.2 KB)
- `submissions\popular_science\LLM_Ancient_Philosophy_Meets_Modern_AI.md` (9.0 KB)
- `submissions\popular_science\README.md` (3.3 KB)

### guides/

- `guides\summary_statistics.md` (9.4 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for Press / Podcasts / TED submission review.*