WHITE-PAPER/reviewers/packages/v3/media/PACKAGE_MANIFEST.md
# Review Package: MEDIA

**Generated:** 2025-12-26 02:07:58
**Target Venue:** Press / Podcasts / TED
**Total Size:** 57.7 KB
**Total Files:** 8

---

## Description

Media/press package (Press releases, podcasts)

---

## Reading Order

Start with these files in order:

1. `submissions/media/README.md`
2. `submissions/media/LLM_Unlocking_AI_Identity.md`
3. `submissions/popular_science/LLM_Ancient_Philosophy_Meets_Modern_AI.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 6 files | 42.6 KB |
| guides/ | 1 files | 11.5 KB |
| planning/ | 1 files | 3.6 KB |

**Total:** 8 files, 57.7 KB

---

## File Listing

### submissions/

- `submissions\media\LLM_Unlocking_AI_Identity.md` (5.4 KB)
- `submissions\media\MEDIA_FINAL.md` (8.0 KB)
- `submissions\media\README.md` (5.3 KB)
- `submissions\popular_science\LLM_Ancient_Philosophy_Meets_Modern_AI.md` (9.0 KB)
- `submissions\popular_science\POPULAR_SCIENCE_FINAL.md` (11.6 KB)
- `submissions\popular_science\README.md` (3.4 KB)

### guides/

- `guides\summary_statistics.md` (11.5 KB)

### planning/

- `planning\NOVAS_OVERCLAIMING_PREVENTION.md` (3.6 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for Press / Podcasts / TED submission review.*